# investment-optimiser

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
.claude/: settings.local.json
.grill-session/: consistency-audit.md  final.md  intent-drift-audit.md  level1.md  level2-allocation-engine.md  level2-dashboard-ux.md  level2-data-ingestion.md  level2-friction-model.md  level2-persistence-layer.md  level2-signal-layer.md  level3-allocation-engine-gry-calculation.md  level3-allocation-engine-optimizer-algorithm.md  level3-allocation-engine-scenario-engine.md  level3-data-ingestion-csv-normalisation.md  level3-data-ingestion-gilt-metadata-lookup.md  level3-data-ingestion-yfinance-refresh.md  level3-persistence-layer-dashboard-db-access.md  level3-persistence-layer-refresh-job-structure.md  level3-persistence-layer-schema-definitions.md  level3-signal-layer-equity-signal-pe-source.md  level3-signal-layer-gry-computation.md  level3-signal-layer-signal-state-machine.md  reconciliation-log.md
.repodocs/: config.yaml
.streamlit/: config.toml  secrets.toml
docs/: external-tooling-research-brief.md  external-tooling-research-claude-v1.md  external-tooling-research.md  implementation-status.md  policy-pack-v1.md  policy-pack-v2.md  system-design.md
tests/: test_allocation_runs.py  test_allocation_view.py  test_app_smoke.py  test_blocked_trade_explanations.py  test_boe.py  test_bucket_assignment.py  test_cash_allocator.py  test_constraint_explanations.py  test_decision_log.py  test_dmo.py  test_dmo_d10c.py  test_duration_liquidity_signals.py  test_equity_signals.py  (+26 more)
(+114 files in other folders)
