[project]
name = "investment-optimiser"
version = "0.1.0"
description = "Local Streamlit dashboard for portfolio optimisation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "govuk-bank-holidays>=0.19",
    "pandas>=2.0",
    "scipy>=1.14",
    "sqlalchemy>=2.0",
    "streamlit>=1.45",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investment_optimiser"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
